--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ Django==4.0.5
 django-extensions==3.1.5
 django-readonly-model==1.2
 Pillow==9.2.0
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 sqlparse==0.4.2
