--- a/analytics/settings/local.py.example
+++ b/analytics/settings/local.py.example
@@ -7,13 +7,15 @@ DEBUG = True
 
 SECRET_KEY = ''
 
+#DATABASE_ROUTERS = ['analytics.replica.router.ReplicaRouter']
+#DATABASE_APPS_MAPPING = {'replica_ro': 'replica_db',}
 
 DATABASES = {
-#    'default': {
-#        'ENGINE': 'django.db.backends.sqlite3',
-#        'NAME': BASE_DIR / 'db.sqlite3',
-#    }
     'default': {
+        'ENGINE': 'django.db.backends.sqlite3',
+        'NAME': BASE_DIR / 'db.sqlite3',
+    },
+    'replica_db': {
          'ENGINE': 'django.contrib.gis.db.backends.postgis',
          'NAME': 'rephoto_replica',
          'USER': '',
